# drone_fyp

./: .gitignore  README.md  pyproject.toml
gym_pybullet_drones/: __init__.py
gym_pybullet_drones/assets/: cf2x.urdf  gate_1m.urdf  racer.urdf  waypoint.urdf
gym_pybullet_drones/control/: CustomCTBRControl.py
gym_pybullet_drones/envs/: BaseAviary.py  CtrlAviary.py  GateRL.py  SensorEnv.py
gym_pybullet_drones/envs/env_settings/: env1_setting.py
gym_pybullet_drones/examples/: customPID_test.py  gateRL_train.py
gym_pybullet_drones/gateRL/: envState.py  gateRLEnv.py  gateRL_train.py  interpolate.py  procedualLearning.py  test.py  train.py  visualize_trj.py  waypoints.py
gym_pybullet_drones/gateRL/env_state_managers/: envState1.py  envState2.py
gym_pybullet_drones/gateRL/waypoints/: WaypointTemplate.py  acro_templates.py  easy_templates.py  hard_templates.py  test_templates.py  train_templates.py  train_templates2.py
gym_pybullet_drones/sensori_agent/: MPC_control_env.py  MPC_demo.py  SensoriAgentEnv.py  acro_templates.py  model.py  mpc_helpers.py  simple_mpc_controller.py  train_env.py  trajectory.py  trajectory_generation.py  trajectory_optimize.py  vins_frontend.py
gym_pybullet_drones/sensori_agent/MPC/: MPC_control_env.py  MPC_demo.py  mpc_helpers.py  simple_mpc_controller.py
gym_pybullet_drones/sensori_agent/trajectory/: trajectory_generation.py  trajectory_optimize.py  (+1 more)
gym_pybullet_drones/sensors/: camera.py  imu.py  sensor.py
gym_pybullet_drones/utils/: constants.py  convert_video.py  enums.py  track_settings.py  tracks.py  waypoints.py
(+2 files in other folders)
