[tool.poetry]
name = "drone_fyp"
version = "1.0.0"
description = "drone acrobatic through simulation"
authors = ["Shum, Oi Ching"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "gym_pybullet_drones" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2"
scipy = "^1.10"
transforms3d = "^0.4.1"
matplotlib = "^3.7"
pytest = ">=7.3,<10.0"
pybullet = "^3.2.5"
gymnasium = "~=1.2"
stable-baselines3 = "^2.0.0"
control = "^0.10.2"
casadi = "^3.6.7"
opencv-python = "^4.10.0.84"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
